<resources>
    <string name="app_name">ExpenseTracker</string>

    <!-- Input field labels -->
    <string name="action_settings">Settings</string>
    <string name="expense_item">Item</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_amount_others">Amount (others)</string>
    <string name="expense_category">Category</string>
    <string name="expense_date">Date</string>
    <string name="expense_notes">Notes</string>
    <string name="currency_label">Currency</string>
    <string name="currency_exchange_rate">Exchange Rate</string>

    <!-- Button text -->
    <string name="button_expense_submit">Submit</string>
    <string name="button_expense_submitting">Submitting…</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_setup">Sheet Setup</string>
    <string name="button_history">Update History</string>
    <string name="button_update_categories">Update Overview</string>
    <string name="button_edit_history_item">Edit</string>
    <string name="button_delete_history_item">Del</string>

    <!-- Status messages -->
    <string name="status_no_internet">No internet connection - saved request for later</string>
    <string name="status_need_permission">Error: App needs Google permission</string>
    <string name="status_google_error">Error: Google Error</string>
    <string name="status_not_signed_in">Error: Not Signed In</string>
    <string name="status_spent_so_far">Spent %1$s on %2$s</string>

    <!-- Form validation -->
    <string name="form_no_item">Item cannot be blank</string>
    <string name="form_no_amount">Amount cannot be blank</string>
    <string name="form_no_category">Category cannot be blank</string>
    <string name="form_no_date">Date cannot be blank</string>
    <string name="form_no_spreadsheet_id">Set a spreadsheet Id</string>
    <string name="form_no_monthly_summary_sheet_name">Set a monthly summary sheet name</string>
    <string name="form_no_data_sheet_name">Set a data sheet name</string>
    <string name="form_no_overview_sheet_name">Set an overview sheet name</string>

    <!-- Widget -->
    <string name="widget_status_never_updated">Never Updated</string>
    <string name="widget_status_updating">Updating…</string>
    <string name="widget_status_updated">Updated at %1$s</string>

    <!-- Settings activity link label -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Section Titles -->
    <string name="pref_header_sheet">Sheet Settings</string>
    <string name="pref_header_currency">Currency Defaults</string>
    <string name="pref_header_history">History Defaults</string>

    <!-- Preference Labels -->
    <string name="pref_label_google_spreadsheet_id">Google Spreadsheet Id</string>
    <string name="pref_label_overview_sheet_name">Overview Sheet Name</string>
    <string name="pref_label_overview_sheet_id">Overview Sheet Id</string>
    <string name="pref_label_data_sheet_name">Data Sheet Name</string>
    <string name="pref_label_data_sheet_id">Data Sheet Id</string>
    <string name="pref_label_currency">Currency</string>
    <string name="pref_label_exchange_rate">Exchange Rate</string>
    <string name="pref_label_categories_list">Expense Categories (comma-separated)</string>
    <string name="pref_label_categories_list2">Expense Categories 2</string>
    <string name="pref_label_monthly_summary_sheet_name">Monthly Summary Sheet Name</string>
    <string name="pref_label_monthly_summary_sheet_id">Monthly Summary Sheet Id</string>
    <string name="pref_label_month_column">January Column</string>
    <string name="pref_label_history_length">History length</string>

    <!-- Defaults -->
    <string name="default_categories">Groceries,Dining Out,Drinks,Material Items,Entertainment,Transit,Personal/Medical,Gifts,Travel,Miscellaneous,Film,Household,Other Income,Rent,Internet,Hydro,Tenant Insurance,Phone,Spotify,Debt Repayment</string>
    <string name="default_history_length">25</string>

    <!-- Notifications -->
    <string name="notification_queued_requests_channel_name">Queued Requests</string>
    <string name="notification_queued_requests_channel_description">Notifications for queued requests being sent to the sheet</string>
    <string name="notification_queued_requests_title">Sent queued request</string>
    <string name="notification_queued_requests_content">%1$s sent to sheet</string>

    <!-- Navigation -->
    <string name="nav_form">New Expense</string>
    <string name="nav_history">History</string>
    <string name="nav_categories">Overview</string>
    <string name="nav_detail">Expense Details</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>

</resources>
