<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_new_expense"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/nav_form" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/nav_categories" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_account" />
</menu>