<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_form">

    <fragment
        android:id="@+id/navigation_form"
        android:name="com.lozog.expensetracker.ui.form.FormFragment"
        android:label="Expense Tracker"
        tools:layout="@layout/fragment_form" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.lozog.expensetracker.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.lozog.expensetracker.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.lozog.expensetracker.ui.account.AccountFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_account"/>

</navigation>